# aomi-sdk

./: .gitignore  AGENTS.md  Cargo.toml  aomi
.claude/skills/aomi-app-client-api-gen/: SKILL.md
.claude/skills/aomi-app-e2e-tester/: SKILL.md
.claude/skills/aomi-app-ux-tool-maker/: SKILL.md
.claude/skills/openapi-from-docs/: SKILL.md
.github/workflows/: ci.yml  publish-sdk.yml
aomi-build/: Cargo.toml  README.md
aomi-build/src/: main.rs  new_app.rs  spec_load.rs
aomi-build/src/client/: mod.rs
aomi-build/src/specs/: apis_guru.rs  github.rs  meta.rs  mod.rs  postman.rs  well_known.rs
aomi-build/src/test_schema/: mod.rs
aomi-build/src/tighten/: mod.rs
aomi-build/src/tool/: mod.rs  render.rs
apps/across/: Cargo.toml  test.json
apps/across/src/: lib.rs  tool.rs
apps/binance/: Cargo.toml
apps/binance/src/: lib.rs  tool.rs
apps/bybit/: Cargo.toml
apps/bybit/src/: lib.rs  tool.rs
apps/byreal/: BYREAL_CLI_FLOWS.md  Cargo.toml  HANDOFF.md  test.json
apps/byreal/src/: client.rs  lib.rs  testing.rs  tool.rs
apps/byreal/src/client/: lp.rs  mod.rs  perps.rs  spot.rs
apps/byreal/src/tool/: lp.rs  mod.rs  perps.rs  spot.rs
apps/byreal/tests/: byreal_solana_smoke.rs  smoke_order.rs
apps/cow/: Cargo.toml  app_test.json  test.json
apps/cow/src/: client.rs  lib.rs  tool.rs
apps/cow/tests/: live_flow.rs
apps/defi/src/: lib.rs
apps/defillama/: Cargo.toml  app_test.json  test.json
apps/defillama/src/: lib.rs  tool.rs
apps/delta/: Cargo.toml  openapi.meta.json  openapi.preprocessed.yaml  openapi.yaml
apps/delta/src/: lib.rs  tool.rs
apps/dune/: Cargo.toml
apps/dune/src/: lib.rs  tool.rs
apps/dydx/: Cargo.toml  app_test.json  test.json
apps/dydx/src/: lib.rs  tool.rs
apps/fanforge/: Cargo.toml
apps/gmx/: Cargo.toml  app_test.json  test.json
apps/gmx/src/: lib.rs  tool.rs
apps/hyperliquid/: Cargo.toml  app_test.json  test.json
apps/hyperliquid/src/: lib.rs  tool.rs
apps/kaito/: Cargo.toml
apps/kaito/src/: lib.rs  tool.rs
apps/kalshi/: Cargo.toml
apps/kalshi/src/: lib.rs  tool.rs
apps/khalani/: Cargo.toml  app_test.json  test.json
apps/khalani/src/: client.rs  lib.rs  tool.rs  types.rs
apps/krexa/: Cargo.toml  openapi.meta.json  openapi.preprocessed.yaml  openapi.yaml  test.json
apps/krexa/samples/: getCreditEligibility.200.json  getCreditLine.200.json  getKyaQuick.200.json  getScore.200.json  payshBalance.200.json  searchKyaAgents.200.json
apps/krexa/scripts/: deploy_agent.py
apps/krexa/src/: auth.rs  lib.rs  tool.rs
apps/krexa/src/client/: client.rs  mod.rs
apps/lifi/: Cargo.toml  app_test.json  test.json
apps/lifi/src/: lib.rs  tool.rs
apps/limitless/: Cargo.toml  openapi.meta.json  openapi.preprocessed.yaml  openapi.yaml  test.json
apps/limitless/src/: auth.rs  lib.rs  tool.rs
apps/limitless/src/client/: client.rs  mod.rs
apps/manifold/: Cargo.toml  test.json
apps/manifold/src/: lib.rs  tool.rs
apps/molinar/: app_test.json  test.json
apps/molinar/src/: client.rs
apps/morpho/: Cargo.toml  app_test.json  test.json
apps/morpho/src/: lib.rs  tool.rs
apps/neynar/: Cargo.toml
apps/neynar/src/: lib.rs  tool.rs
apps/okx/: Cargo.toml
apps/okx/src/: lib.rs  tool.rs
apps/oneinch/: Cargo.toml  test.json
apps/oneinch/src/: lib.rs  tool.rs
apps/para/: Cargo.toml  openapi.meta.json  openapi.preprocessed.yaml  openapi.yaml
apps/para-consumer/: Cargo.toml
apps/para-consumer/src/: lib.rs  tool.rs
apps/para/src/: lib.rs  tool.rs
apps/pelagos/: Cargo.toml  openapi.meta.json  openapi.preprocessed.yaml  openapi.yaml
apps/pelagos/src/: lib.rs  tool.rs
apps/polymarket/: app_test.json
apps/polymarket-rewards/: app_test.json  test.json
apps/polymarket-rewards/src/: client.rs  lib.rs  tool.rs
apps/x/: Cargo.toml
apps/yearn/: Cargo.toml  app_test.json  test.json
apps/yearn/src/: client.rs  lib.rs  tool.rs
apps/zerox/: Cargo.toml
apps/zora/: Cargo.toml  openapi.meta.json  openapi.preprocessed.yaml  openapi.yaml  test.json
docs/: apps-renew.md  auth-gap.md  auth-practices.md  base-apps.md  host-interop.md  sign-tx-solana-runtime.md  test-json-schema.md
ext/: Cargo.toml
ext/specs/: across.meta.json  across.preprocessed.yaml  across.yaml  binance.meta.json  binance.preprocessed.yaml  binance.yaml  bybit.meta.json  bybit.yaml  cow.meta.json  cow.preprocessed.yaml  cow.yaml  defillama.meta.json  defillama.preprocessed.yaml  defillama.yaml  dune.meta.json  dune.preprocessed.yaml  dune.yaml  dydx.meta.json  dydx.preprocessed.yaml  dydx.yaml  gmx.meta.json  gmx.preprocessed.yaml  gmx.yaml  hyperliquid.meta.json  hyperliquid.preprocessed.yaml  hyperliquid.yaml  kaito.meta.json  kaito.preprocessed.yaml  kaito.yaml  kalshi.meta.json  kalshi.preprocessed.yaml  kalshi.yaml  khalani.meta.json  khalani.preprocessed.yaml  khalani.yaml  lifi.meta.json  lifi.preprocessed.yaml  lifi.yaml  manifold.meta.json  manifold.preprocessed.yaml  (+18 more)
ext/specs/khalani.samples/: buildDeposit.200.json  getQuote.200.json
ext/src/: hmac_auth.rs  lib.rs
ext/src/across/: client.rs  mod.rs  types.rs
ext/src/binance/: auth.rs  client.rs  mod.rs  types.rs
ext/src/bybit/: auth.rs  client.rs  mod.rs  types.rs
ext/src/cow/: client.rs  mod.rs  types.rs
ext/src/defillama/: client.rs  mod.rs  types.rs
ext/src/dune/: client.rs  mod.rs
ext/src/dydx/: client.rs  mod.rs
ext/src/gmx/: client.rs  mod.rs  types.rs
ext/src/hyperliquid/: client.rs  mod.rs
ext/src/kaito/: client.rs  mod.rs
ext/src/kalshi/: client.rs  mod.rs  types.rs
ext/src/khalani/: client.rs  mod.rs
ext/src/lifi/: client.rs  mod.rs  types.rs
ext/src/manifold/: client.rs  mod.rs  types.rs
ext/src/morpho/: client.rs  mod.rs
ext/src/neynar/: client.rs  mod.rs  types.rs
ext/src/okx/: auth.rs  client.rs  mod.rs  types.rs
ext/src/oneinch/: client.rs  mod.rs  types.rs
ext/src/x/: client.rs  mod.rs  types.rs
ext/src/yearn/: client.rs  mod.rs
ext/src/zerox/: client.rs  mod.rs  types.rs
sdk/: Cargo.toml
sdk/src/: builder.rs  ffi.rs  lib.rs  route.rs  secrets.rs  testing.rs  types.rs
xtask/src/: main.rs  validate.rs
(+25 files in other folders)
