[workspace]
members = [
    "sdk",
    "sdk/examples/hello-app",
    "sdk/examples/app-template-http",
    "xtask",
    "ext",
    "aomi-build",
]
exclude = [
    "apps/across",
    "apps/admin",
    "apps/binance",
    "apps/bybit",
    "apps/byreal",
    "apps/cow",
    "apps/defillama",
    "apps/delta",
    "apps/dune",
    "apps/dydx",
    "apps/gmx",
    "apps/hyperliquid",
    "apps/kaito",
    "apps/kalshi",
    "apps/khalani",
    "apps/l2beat",
    "apps/lifi",
    "apps/manifold",
    "apps/molinar",
    "apps/morpho",
    "apps/neynar",
    "apps/okx",
    "apps/oneinch",
    "apps/para",
    "apps/para-consumer",
    "apps/polymarket",
    "apps/x",
    "apps/pelagos",
    "apps/yearn",
    "apps/zerox",
    "apps/polymarket-rewards",
    "apps/limitless",
    "apps/zora",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.91"

[workspace.dependencies]
aomi-sdk = { path = "sdk" }
base64 = "0.22"
chrono = "0.4"
eyre = "0.6.12"
hmac = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "charset", "http2", "json", "query", "rustls"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
