[package]
name = "aomi-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "aomi-build"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
eyre = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
progenitor = "0.14"
openapiv3 = "2.2"
indexmap = "2"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
