[package]
name = "aomi-ext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Generated-client runtime (only pulled in when a generated provider is enabled)
progenitor-client = { version = "0.14", optional = true }

# Per-provider optional deps
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[features]
default = []
across = []
binance = ["dep:hmac", "dep:sha2"]
bybit = ["dep:hmac", "dep:sha2"]
cow = ["dep:progenitor-client", "dep:chrono"]
defillama = ["dep:progenitor-client", "dep:chrono"]
dune = ["dep:progenitor-client", "dep:chrono"]
dydx = []
gmx = []
hyperliquid = []
kalshi = ["dep:chrono"]
lifi = []
manifold = []
morpho = []
neynar = []
okx = ["dep:hmac", "dep:sha2", "dep:base64"]
oneinch = []
yearn = []
zerox = []
x = []
