[package]
name = "aomi-ext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Generated-client runtime (only pulled in when a generated provider is enabled)
progenitor-client = { version = "0.14", optional = true }

# Per-provider optional deps
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
chrono = { workspace = true, optional = true, features = ["serde"] }
uuid = { version = "1", optional = true, features = ["serde", "v4"] }
regress = { version = "0.10", optional = true }

[features]
default = []
# Shared HMAC-SHA256 + URL/timestamp helpers for venues that sign requests.
# Pull in via `features = ["hmac-auth"]` from any app whose `auth.rs` needs them.
hmac-auth = ["dep:hmac", "dep:sha2", "dep:base64"]
kaito = ["dep:progenitor-client"]
khalani = ["dep:progenitor-client"]
across = ["dep:progenitor-client"]
binance = ["hmac-auth", "dep:progenitor-client"]
bybit = ["hmac-auth", "dep:progenitor-client", "dep:chrono"]
cow = ["dep:chrono", "dep:progenitor-client"]
defillama = ["dep:chrono", "dep:progenitor-client"]
dune = ["dep:chrono", "dep:progenitor-client"]
dydx = ["dep:progenitor-client"]
gmx = ["dep:progenitor-client"]
hyperliquid = ["dep:progenitor-client"]
kalshi = ["dep:chrono", "dep:progenitor-client"]
lifi = ["dep:progenitor-client"]
manifold = ["dep:progenitor-client"]
morpho = []
neynar = ["dep:chrono", "dep:progenitor-client", "dep:regress", "dep:uuid"]
okx = ["hmac-auth", "dep:progenitor-client"]
oneinch = ["dep:progenitor-client", "dep:chrono"]
yearn = ["dep:progenitor-client"]
zerox = ["dep:progenitor-client"]
x = ["dep:progenitor-client"]
