[package]
name = "aomi-sdk"
version = "0.1.15"
edition = "2024"
license = "MIT"
repository = "https://github.com/aomi-labs/aomi-sdk"
description = "Lightweight SDK for building dynamic Aomi plugins (cdylib)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.4"
eyre.workspace = true
libloading = "0.8"
tracing.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tempfile = "3"
