[package]
name = "byreal"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aomi-sdk = { path = "../../sdk" }
hl_ranger = "=0.6.0-ranger.20"
ethers = { version = "2.0", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
# Enable signers for the live smoke test only. The runtime app never holds keys.
ethers = "2.0"
