[package]
name = "dyn-khalani"
version = "0.1.0"
edition = "2024"

[lib]
name = "khalani"
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = { path = "../../sdk" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
