[package]
name = "krexa"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = { path = "../../sdk" }
# Solana owner-wallet signing for credit-request: Ed25519 over a fixed
# challenge string, base58-encoded on the wire (matches Solana keypair
# conventions and the `/access/provision-key` flow).
ed25519-dalek = "2"
bs58 = "0.5"
progenitor-client = "0.14"
chrono = { version = "0.4", features = ["serde"] }
# Match progenitor-client's reqwest version so curated tool layers can wrap
# `Client::new_with_client(...)` with header-injecting middleware for auth.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
