[package]
name = "krexa"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = { path = "../../sdk" }
# Solana owner-/agent-wallet signing for credit-request, KYA owner
# proof, and invite redemption. Krexa uses two encodings depending on
# the endpoint: base58 for invite signatures (matches Solana keypair
# conventions) and base64 for the KYA `ownerSignature` body field.
ed25519-dalek = "2"
bs58 = "0.5"
base64 = "0.22"
progenitor-client = "0.14"
chrono = { version = "0.4", features = ["serde"] }
# Match progenitor-client's reqwest version so curated tool layers can wrap
# `Client::new_with_client(...)` with header-injecting middleware for auth.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
