[package]
name = "lifi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = { path = "../../sdk" }
aomi-ext = { path = "../../ext", features = ["lifi"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
