[package]
name = "limitless"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aomi-sdk = { path = "../../sdk" }
# Shared HMAC-SHA256 + URL/timestamp primitives for the `lmts-*` request
# signing. Per-venue prehash recipe stays in `src/auth.rs`.
aomi-ext = { path = "../../ext", features = ["hmac-auth"] }
progenitor-client = "0.14"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
regress = "0.10"
# Match progenitor-client's reqwest version so curated tool layers can wrap
# `Client::new_with_client(...)` with header-injecting middleware for auth.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
